Fix squashed images

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -230,9 +230,10 @@ body {
 /* Secondary Headers */
 
 .bg-img {
-    min-height : 90vh;
-    background-size: cover ;
+    height: 90vh;
+    background-size: cover;
     width: 100%;
+    object-fit: cover;
     background-position: center;
 }
 
